# ydlidar-workspace

./: .gitmodules
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lidar_manual/share/lidar_manual/: package.bash  package.zsh
install/lidar_test/share/lidar_test/: package.bash  package.zsh
install/my_robot/lib/my_robot/: cmd_vel_bridge  reactive_avoidance  serial_bridge
install/my_robot/share/my_robot/: package.sh  package.xml
install/my_robot/share/my_robot/config/: localization_params.yaml  nav2_params.yaml  navigation_view.rviz  slam_params_online_async.yaml  ydlidar_slam_view.rviz
install/my_robot/share/my_robot/launch/: bringup_localization.launch.py  bringup_navigation.launch.py  bringup_slam.launch.py
install/ydlidar_ros2_driver/lib/ydlidar_ros2_driver/: ydlidar_ros2_driver_client  ydlidar_ros2_driver_node
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/cmake/: ydlidar_ros2_driverConfig-version.cmake  ydlidar_ros2_driverConfig.cmake
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/config/: ydlidar.rviz
install/ydlidar_sdk/share/YDLIDAR_SDK/: FindYDLIDAR_SDK.cmake
install/ydlidar_sdk/share/ydlidar_sdk/: package.sh
install/yolo_testing/lib/yolo_testing/: yolo_publisher
install/yolo_testing/share/yolo_testing/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/lidar_manual/: CMakeLists.txt  test_manual.cpp
src/lidar_test/: CMakeLists.txt  test.cpp
src/my_robot/: package.xml  setup.py
src/my_robot/launch/: auto_nav.launch.py
src/my_robot/rviz/: slam.rviz
src/yolo_testing/: setup.cfg  setup.py
(+22 files in other folders)
