<?xml version="1.0"?>
<package format="3">
  <name>my_robot</name>
  <version>0.0.1</version>
  <description>Autonomous mobile robot control using YDLIDAR and ESP32-S3 bridge (ROS 2 Humble)</description>
  <maintainer email="waesco704@nchu.edu.tw">waesco704</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

